--- a/app/backend/package.json
+++ b/app/backend/package.json
@@ -21,6 +21,7 @@
     "sinon": "^14.0.0"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "jsonwebtoken": "^8.5.1",
