--- a/app/backend/package.json
+++ b/app/backend/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "devDependencies": {
     "chai": "^4.3.6",
+    "chai-http": "^4.3.0",
     "eslint": "^8.19.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.26.0",
